# datacenter

./: .gitignore  README.md  build_frontend.bat  compress.bat  main.py  pyproject.toml  start.bat  start.sh  start_datacenter.py  start_datacenter.sh  start_dev.bat  start_web.bat  start_web.py
docs/: cmd.md  tick_api.md
examples/: __init__.py
frontend/: .npmrc  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: datacenter.ts
frontend/src/components/: AboutCard.vue  LogsCard.vue  ModulesCard.vue  NavBar.vue  StatusCard.vue  (+1 more)
src/: __init__.py  constants.py  system_config.py
src/api/: __init__.py  server.py
src/core/: alarm_scheduler.py  bar_generator.py  bar_manager.py  base_gateway.py  constants.py  contract_manager.py  data_archiver.py  data_compressor.py  datacenter_service.py  datacenter_starter.py  duckdb_storage.py  event.py  event_bus.py  hybrid_storage.py  metrics_collector.py  object.py  pack_payload.py  partitioned_csv_writer.py  sqlite_storage.py  storage.py  trace_context.py  trading_day_manager.py
src/ctp/: __init__.py
src/gateway/: __init__.py  gateway_const.py  gateway_helper.py  market_gateway.py  trader_gateway.py
src/log/: __init__.py  logger.py
src/utils/: __init__.py  common.py  config_manager.py  get_path.py  utility.py
static/: dashboard.css  dashboard.html  dashboard.js  index.html
static/assets/: AboutPage-BRz5INTM.css  HomePage-D_Wp2ZeF.css
static/chunks/: AboutPage-Bx2Bilcc.js  HomePage-CVufraUV.js
tests/: __init__.py  test_logger.py
(+21 files in other folders)
